fixed style gaps and code style in page and post

--- a/client/src/components/Post/Post.module.css
+++ b/client/src/components/Post/Post.module.css
@@ -5,7 +5,8 @@
 
 .post-container {
 	font-family: TTOctosquares;
-	padding-bottom: 5px;
+	max-width: 750px;
+	width: 100%;
 }
 
 .user-container {
@@ -23,26 +24,27 @@
 .para-container {
 	background: var(--signup-background);
 	color: #000;
-	padding: 5px 8px;
+	padding: 10px;
+	padding-bottom: 5px;
 	border-radius: 10px;
 	margin: 2px 0px;
-	width: auto;
+	width: 100%;
 	border: 2px solid var(--soft-shadow);
 	box-shadow: 4px 5px 0px var(--soft-shadow);
 	text-align: left;
+	word-break: break-word;
 	font-size: 1.1rem;
 }
 
 .post-date {
 	font-size: 0.6em;
 	color: var(--soft-shadow);
-	margin-bottom: 0;
 }
 
 .icons-container {
 	display: flex;
-	font-size: 1.5rem;
-	gap: 0.5rem;
+	font-size: 1.75rem;
+	gap: 0.75rem;
 }
 
 .icons-container button {
